--- a/packages/examples/simple-storage/web3api.yaml
+++ b/packages/examples/simple-storage/web3api.yaml
@@ -11,6 +11,6 @@ query:
     file: ./query/schema.graphql
   module:
     language: wasm/assemblyscript
-    file: ./mutation/index.ts
+    file: ./query/index.ts
 subgraph:
   file: ./subgraph/subgraph.yaml
