--- a/packages/client-js/package.json
+++ b/packages/client-js/package.json
@@ -9,7 +9,11 @@
   },
   "dependencies": {
     "@web3api/wasm": "0.0.1-alpha.1",
-    "graphql-tag": "2.10.4"
+    "eth-ens-namehash": "2.0.8",
+    "ethers": "5.0.7",
+    "graphql": "15.3.0",
+    "graphql-tag": "2.10.4",
+    "is-ipfs": "1.0.3"
   },
   "devDependencies": {
     "@web3api/client-test-env": "0.0.1-alpha.1"
