--- a/packages/client-js/package.json
+++ b/packages/client-js/package.json
@@ -12,9 +12,12 @@
     "ethers": "5.0.7",
     "graphql": "15.3.0",
     "graphql-tag": "2.10.4",
-    "is-ipfs": "1.0.3"
+    "ipfs-http-client": "45.0.0",
+    "is-ipfs": "1.0.3",
+    "js-yaml": "3.14.0"
   },
   "devDependencies": {
+    "@types/js-yaml": "3.11.1",
     "@web3api/client-test-env": "0.0.1-alpha.1"
   }
 }
