--- a/packages/client-js/package.json
+++ b/packages/client-js/package.json
@@ -8,7 +8,11 @@
     "test:env:down": "node ./scripts/env-down.js"
   },
   "dependencies": {
+    "@assemblyscript/loader": "0.14.1",
     "@web3api/wasm": "0.0.1-alpha.1",
+    "apollo-link": "1.2.14",
+    "apollo-link-http": "1.5.17",
+    "cross-fetch": "3.0.5",
     "ethers": "5.0.7",
     "graphql": "15.3.0",
     "graphql-tag": "2.10.4",
