--- a/packages/client-test-env/docker-compose.yml
+++ b/packages/client-test-env/docker-compose.yml
@@ -11,3 +11,32 @@ services:
     ports:
       - '8545:8545'
     command: -l 8000000 --networkId 1576478390085 --deterministic --hostname=0.0.0.0
+  graph-node:
+    image: graphprotocol/graph-node
+    ports:
+      - '8000:8000'
+      - '8001:8001'
+      - '8020:8020'
+      - '8030:8030'
+      - '8040:8040'
+    depends_on:
+      - ipfs
+      - postgres
+    environment:
+      postgres_host: postgres:5432
+      postgres_user: graph-node
+      postgres_pass: let-me-in
+      postgres_db: graph-node
+      ipfs: 'ipfs:5001'
+      ethereum: 'private:http://ganache:8545'
+      RUST_LOG: info
+      RUST_BACKTRACE: 1
+  postgres:
+    image: postgres
+    ports:
+      - '5432:5432'
+    command: ["postgres", "-cshared_preload_libraries=pg_stat_statements"]
+    environment:
+      POSTGRES_USER: graph-node
+      POSTGRES_PASSWORD: let-me-in
+      POSTGRES_DB: graph-node
