CLI building example

--- a/examples/simple-storage/protocol/package.json
+++ b/examples/simple-storage/protocol/package.json
@@ -8,8 +8,6 @@
   "devDependencies": {
     "@graphprotocol/graph-cli": "^0.18.0",
     "@graphprotocol/graph-ts": "^0.18.1",
-    "@web3api/ts-runtime": "0.0.1-alpha.1",
-    "@web3api/ts-mutation": "0.0.1-alpha.1",
-    "@web3api/ts-query": "0.0.1-alpha.1"
+    "@web3api/wasm-ts": "0.0.1-alpha.1"
   }
 }
