--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "root",
+  "license": "MIT",
   "private": true,
   "workspaces": {
     "packages": [
@@ -8,7 +9,10 @@
     ]
   },
   "scripts": {
-    "test:ci:client-js": "yarn workspace @web3api/client-js test:ci"
+    "build": "yarn build:wasm-ts && yarn build:cli && yarn build:client-js",
+    "build:cli": "yarn workspace @web3api/cli build",
+    "build:client-js": "yarn workspace @web3api/client-js build",
+    "build:wasm-ts": "yarn workspace @web3api/wasm-ts build"
   },
   "devDependencies": {
     "lerna": "3.22.1"
