--- a/packages/wasm-ts/package.json
+++ b/packages/wasm-ts/package.json
@@ -1,8 +1,10 @@
 {
   "name": "@web3api/wasm-ts",
   "version": "0.0.1-alpha.1",
+  "license": "MIT",
   "main": "./assembly/index.ts",
   "scripts": {
+    "build": "asc ./assembly/index.ts --outFile ./build/index.wasm -d ./build/index.d.ts",
     "test": "asp --verbose",
     "test:ci": "asp --summary"
   },
