--- a/packages/client-js/tsconfig.json
+++ b/packages/client-js/tsconfig.json
@@ -1,17 +1,31 @@
 {
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": "dist",
-    "target": "es2015",
-    "module": "commonjs",
-    "composite": true,
-    "declaration": true,
-    "sourceMap": true,
+    "outDir": "build",
     "esModuleInterop": true,
-    "strict": true,
-    "lib": ["es2015", "es6", "esnext.asynciterable", "dom"]
+    "lib": [
+      "es2015",
+      "es5",
+      "dom"
+    ],
+    "moduleResolution": "node",
+    "declaration": true,
+    "preserveSymlinks": true,
+    "preserveWatchOutput": true,
+    "pretty": false,
+    "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "noUnusedLocals": true,
+    "module": "commonjs",
+    "sourceMap": true,
+    "target": "es5"
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["src/**/__tests__/**/*.ts"],
-  "references": []
+  "include": [
+    "./src/**/*"
+  ],
+  "exclude": [
+    "./src/**/__tests__"
+  ]
 }
