--- a/packages/client-js/src/__tests__/apis/subgraph-query/web3api.yaml
+++ b/packages/client-js/src/__tests__/apis/subgraph-query/web3api.yaml
@@ -10,3 +10,5 @@ query:
   module:
     language: wasm/assemblyscript
     file: ./src/query/index.ts
+subgraph:
+  file: ./src/subgraph/subgraph.yaml
