--- a/examples/simple-storage/protocol/src/subgraph/subgraph.yaml
+++ b/examples/simple-storage/protocol/src/subgraph/subgraph.yaml
@@ -8,7 +8,7 @@ dataSources:
     name: SimpleStorage
     network: private
     source:
-      address: '0xTODO'
+      address: '0x5C69bEe701ef814a2B6a3EDD4B1652CB9cc5aA6f'
       abi: SimpleStorage
     mapping:
       kind: ethereum/events
