--- a/examples/simple-storage/protocol/package.json
+++ b/examples/simple-storage/protocol/package.json
@@ -3,17 +3,18 @@
   "version": "0.0.1-alpha.1",
   "license": "MIT",
   "scripts": {
-    "codegen": "yarn subgraph:codegen",
-    "build": "w3 build && yarn contracts:build",
+    "build": "w3 build",
     "test:env:up": "w3 test-env up && yarn contracts:deploy",
     "test:env:down": "w3 test-env down",
-    "contracts:build": "",
     "subgraph:codegen": "cd src/subgraph && graph codegen --out-dir generated/"
   },
   "devDependencies": {
     "@graphprotocol/graph-cli": "^0.18.0",
     "@graphprotocol/graph-ts": "^0.18.1",
+    "@web3api/cli": "0.0.1-alpha.1",
+    "@web3api/client-js": "0.0.1-alpha.1",
     "@web3api/wasm-ts": "0.0.1-alpha.1",
-    "@web3api/cli": "0.0.1-alpha.1"
+    "ethers": "5.0.8",
+    "js-yaml": "3.14.0"
   }
 }
