--- a/examples/simple-storage/protocol/src/subgraph/subgraph.yaml
+++ b/examples/simple-storage/protocol/src/subgraph/subgraph.yaml
@@ -1,6 +1,6 @@
 specVersion: 0.0.2
 description: SimpleStorage Subgraph Example
-repository: https://github.com/web3-api/prototype
+repository: 'https://github.com/web3-api/prototype'
 schema:
   file: ./schema.graphql
 dataSources:
@@ -8,7 +8,7 @@ dataSources:
     name: SimpleStorage
     network: private
     source:
-      address: '0x5C69bEe701ef814a2B6a3EDD4B1652CB9cc5aA6f'
+      address: '0x254dffcd3277C0b1660F6d42EFbB754edaBAbC2B'
       abi: SimpleStorage
     mapping:
       kind: ethereum/events
