--- a/packages/client-js/package.json
+++ b/packages/client-js/package.json
@@ -2,6 +2,7 @@
   "name": "@web3api/client-js",
   "version": "0.0.1-alpha.1",
   "license": "MIT",
+  "main": "build/index.js",
   "scripts": {
     "build": "rm -rf build && tsc",
     "test": "jest --passWithNoTests --runInBand --verbose",
