--- a/examples/simple-storage/dapp/package.json
+++ b/examples/simple-storage/dapp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dapp",
+  "name": "@web3api/example-simple-storage-dapp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
