--- a/packages/client-js/package.json
+++ b/packages/client-js/package.json
@@ -4,9 +4,9 @@
   "license": "MIT",
   "main": "build/index.js",
   "scripts": {
-    "build": "rm -rf build && NODE_ENV=production tsc",
-    "test": "jest --passWithNoTests --runInBand --verbose",
-    "test:watch": "jest --watch --passWithNoTests --verbose",
+    "build": "rm -rf build && tsc",
+    "test": "WORKER_ENV=test jest --passWithNoTests --runInBand --verbose",
+    "test:watch": "WORKER_ENV=test jest --watch --passWithNoTests --verbose",
     "test:ci": "yarn test:env:up && yarn test && yarn test:env:down",
     "test:env:up": "w3 test-env up",
     "test:env:down": "w3 test-env down"
