--- a/demos/simple-storage/protocol/web3api.yaml
+++ b/demos/simple-storage/protocol/web3api.yaml
@@ -1,4 +1,5 @@
 description: SimpleStorage Web3API Example
+version: "1.0.0"
 repository: https://github.com/web3-api/prototype
 mutation:
   schema:
