sanitation finally works after moving to a json

--- a/demos/simple-storage/protocol/web3api.yaml
+++ b/demos/simple-storage/protocol/web3api.yaml
@@ -1,17 +1,16 @@
 description: SimpleStorage Web3API Example
-version: "1.0.0"
+version: "1"
 repository: https://github.com/web3-api/prototype
 mutation:
   schema:
     file: ./src/mutation/schema.graphql
   module:
     language: wasm/assemblyscript
-    file: ./src/mutation/index.ts
 query:
   schema:
     file: ./src/query/schema.graphql
   module:
     language: wasm/assemblyscript
-    file: ./src/query/index.ts
+    file: 12
 subgraph:
   file: ./src/subgraph/subgraph.yaml
