--- a/demos/simple-storage/protocol/web3api.yaml
+++ b/demos/simple-storage/protocol/web3api.yaml
@@ -1,16 +1,17 @@
 description: SimpleStorage Web3API Example
-version: "1"
+version: "1.0.0"
 repository: https://github.com/web3-api/prototype
 mutation:
   schema:
-    file: ./src/mutation/schema.graphql
+    file: ./src/mutation/index.ts
   module:
     language: wasm/assemblyscript
+    file: ./src/mutation/index.ts
 query:
   schema:
     file: ./src/query/schema.graphql
   module:
     language: wasm/assemblyscript
-    file: 12
+    file: ./src/query/index.ts
 subgraph:
   file: ./src/subgraph/subgraph.yaml
