--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     ]
   },
   "scripts": {
-    "build": "yarn build:wasm-ts && yarn build:client-js && yarn build:cli",
+    "build": "yarn build:wasm-as && yarn build:client-js && yarn build:cli",
     "build:cli": "yarn workspace @web3api/cli build",
     "build:client-js": "yarn workspace @web3api/client-js build",
-    "build:wasm-ts": "yarn workspace @web3api/wasm-ts build",
-    "test": "yarn test:wasm-ts && yarn test:client-js",
-    "test:wasm-ts": "yarn workspace @web3api/wasm-ts test",
+    "build:wasm-as": "yarn workspace @web3api/wasm-as build",
+    "test": "yarn test:wasm-as && yarn test:client-js",
+    "test:wasm-as": "yarn workspace @web3api/wasm-as test",
     "test:client-js": "yarn workspace @web3api/client-js test",
-    "test:ci": "yarn test:wasm-ts && yarn test:ci:client-js",
+    "test:ci": "yarn test:wasm-as && yarn test:ci:client-js",
     "test:ci:client-js": "yarn workspace @web3api/client-js test:ci"
   },
   "devDependencies": {
