--- a/packages/client-js/package.json
+++ b/packages/client-js/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@assemblyscript/loader": "0.14.1",
-    "@web3api/wasm-ts": "0.0.1-alpha.1",
+    "@web3api/wasm-as": "0.0.1-alpha.1",
     "apollo-link": "1.2.14",
     "apollo-link-http": "1.5.17",
     "cross-fetch": "3.0.5",
