--- a/packages/client-js/package.json
+++ b/packages/client-js/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@assemblyscript/loader": "0.14.1",
     "@web3api/wasm-ts": "0.0.1-alpha.1",
+    "@web3api/manifest-schema": "0.0.1-alpha.1",
     "apollo-link": "1.2.14",
     "apollo-link-http": "1.5.17",
     "cross-fetch": "3.0.5",
@@ -22,7 +23,10 @@
     "graphql-tag": "2.10.4",
     "ipfs-http-client": "45.0.0",
     "is-ipfs": "1.0.3",
-    "js-yaml": "3.14.0"
+    "js-yaml": "3.14.0",
+    "jsonschema": "1.3.0",
+    "json-schema-to-typescript": "9.1.1",
+    "semver": "7.3.2"
   },
   "devDependencies": {
     "@types/jest": "26.0.8",
