--- a/packages/client-js/package.json
+++ b/packages/client-js/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "main": "build/index.js",
   "scripts": {
-    "build": "rm -rf build && tsc",
+    "build": "rm -rf build && yarn build:manifest && tsc",
+    "build:manifest": "node ./src/manifest/generate.js",
     "test": "WORKER_ENV=test jest --passWithNoTests --runInBand --verbose",
     "test:watch": "WORKER_ENV=test jest --watch --passWithNoTests --verbose",
     "test:ci": "yarn test:env:up && yarn test && yarn test:env:down",
