--- a/packages/client-js/src/__tests__/manifest/validator/wrong-type/web3api.yml
+++ b/packages/client-js/src/__tests__/manifest/validator/wrong-type/web3api.yml
@@ -1,13 +1,13 @@
 version: 1
 mutation:
   schema:
-    file: ./src/schema.graphql
+    file: ../schema.graphql
   module:
     language: wasm/assemblyscript
-    file: ./src/query-file.ts
+    file: ../query-file.ts
 query:
   schema:
-    file: ./src/schema.graphql
+    file: ../schema.graphql
   module:
     language: wasm/assemblyscript
     file: ./src/mutation-file.ts
