--- a/demos/simple-storage/protocol/web3api.yaml
+++ b/demos/simple-storage/protocol/web3api.yaml
@@ -1,5 +1,5 @@
 description: SimpleStorage Web3API Example
-version: "0.0.1"
+version: 0.0.1
 repository: https://github.com/web3-api/prototype
 mutation:
   schema:
