--- a/packages/client-js/package.json
+++ b/packages/client-js/package.json
@@ -5,7 +5,7 @@
   "main": "build/index.js",
   "scripts": {
     "build": "rm -rf build && yarn build:manifest && tsc",
-    "build:manifest": "node ./src/manifest/generate.js",
+    "build:manifest": "node ./src/scripts/generateManifest.js",
     "test": "WORKER_ENV=test jest --passWithNoTests --runInBand --verbose",
     "test:watch": "WORKER_ENV=test jest --watch --passWithNoTests --verbose",
     "test:ci": "yarn test:env:up && yarn test && yarn test:env:down",
