--- a/packages/manifest-schema/package.json
+++ b/packages/manifest-schema/package.json
@@ -2,9 +2,8 @@
   "name": "@web3api/manifest-schema",
   "version": "0.0.1-alpha.1",
   "license": "MIT",
-  "main": "build/index.js",
-  "typings": "./build/index.d.ts",
+  "main": "build/0-0-1.json",
   "scripts": {
-    "build": "rm -rf build && tsc"
+    "build": "rm -rf build && mkdir build && cp versions/0-0-1.json build"
   }
 }
