--- a/packages/wasm-as/package.json
+++ b/packages/wasm-as/package.json
@@ -10,7 +10,6 @@
   },
   "devDependencies": {
     "@as-pect/cli": "4.0.0",
-    "assemblyscript": "0.15.2",
-    "assemblyscript-json": "0.3.3"
+    "assemblyscript": "0.15.2"
   }
 }
