--- a/demos/uniswap-v2/protocol/package.json
+++ b/demos/uniswap-v2/protocol/package.json
@@ -2,6 +2,6 @@
   "name": "@uniswap/web3api",
   "scripts": {},
   "dependencies": {
-    "@web3api/cli": "0.0.1-alpha.1"
+    "@web3api/cli": "0.0.1-prealpha.1"
   }
 }
