--- a/demos/simple-storage/dapp/package.json
+++ b/demos/simple-storage/dapp/package.json
@@ -8,7 +8,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
-    "@web3api/client-js": "0.0.1-alpha.1",
+    "@web3api/client-js": "0.0.1-prealpha.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
