--- a/docs/package.json
+++ b/docs/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@web3api/docs",
   "private": false,
-  "version": "0.0.1-alpha.1",
+  "version": "0.0.1-prealpha.1",
   "description": "Web3API Docs",
   "author": "dOrg",
   "license": "MIT",
