--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "workspaces": {
     "packages": [
-      "./packages/*",
+      "./packages/**",
       "./demos/simple-storage/*"
     ],
     "nohoist": [
