--- a/packages/client-js/package.json
+++ b/packages/client-js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@web3api/client-js",
-  "version": "0.0.1-alpha.1",
+  "version": "0.0.1-prealpha.1",
   "license": "MIT",
   "main": "build/index.js",
   "scripts": {
@@ -13,11 +13,10 @@
   },
   "dependencies": {
     "@assemblyscript/loader": "0.14.1",
-    "@web3api/wasm-as": "0.0.1-alpha.1",
+    "@web3api/wasm-as": "0.0.1-prealpha.1",
     "apollo-link": "1.2.14",
     "apollo-link-http": "1.5.17",
     "cross-fetch": "3.0.5",
-    "ethers": "5.0.7",
     "graphql": "15.3.0",
     "graphql-tag": "2.10.4",
     "ipfs-http-client": "45.0.0",
@@ -27,7 +26,7 @@
   "devDependencies": {
     "@types/jest": "26.0.8",
     "@types/js-yaml": "3.11.1",
-    "@web3api/cli": "0.0.1-alpha.1",
+    "@web3api/cli": "0.0.1-prealpha.1",
     "axios": "0.19.2",
     "jest": "26.2.2",
     "spawn-command": "0.0.2-1",
