chore: migrator implemented and tested

--- a/packages/client-js/src/__tests__/manifest/validator/not-accepted-field/web3api.yml
+++ b/packages/client-js/src/__tests__/manifest/validator/not-accepted-field/web3api.yml
@@ -1,4 +1,4 @@
-version: "0.0.1"
+version: "0.1.1"
 mutation:
   schema:
     file: ../schema.graphql
@@ -10,7 +10,7 @@ query:
     file: ../schema.graphql
   module:
     language: wasm/assemblyscript
-    file: ./src/mutation-file.ts
+    file: ../mutation-file.ts
 not_accepted_field: not_accepted_field
 
 
