--- a/packages/client-js/src/__tests__/manifest/validator/required-field-missing/web3api.yml
+++ b/packages/client-js/src/__tests__/manifest/validator/required-field-missing/web3api.yml
@@ -8,4 +8,4 @@ query:
     file: ../schema.graphql
   module:
     language: wasm/assemblyscript
-    file: ./src/mutation-file.ts
+    file: ../mutation-file.ts
