--- a/packages/client-js/src/__tests__/manifest/migrator/version-0.0.1-alpha.2/web3api.yml
+++ b/packages/client-js/src/__tests__/manifest/migrator/version-0.0.1-alpha.2/web3api.yml
@@ -2,11 +2,11 @@ description: Awesome Web3API project
 version: "0.0.1-alpha.2"
 api: 
   schemas:
-    file: ../mutation/schema.graphql
-    file: ../query/schema.graphql
+    - file: ../query/schema.graphql
+    - file: ../mutation/schema.graphql
   query:
-    language: wasm/assemblyscript
     file: ../query/index.ts
-  mutation:
     language: wasm/assemblyscript
+  mutation:
     file: ../mutation/index.ts
+    language: wasm/assemblyscript
