--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "test:wasm-as": "yarn workspace @web3api/wasm-as test",
     "test:client-js": "yarn workspace @web3api/client-js test",
     "test:ci": "yarn test:wasm-as && yarn test:ci:client-js",
-    "test:ci:client-js": "yarn workspace @web3api/client-js test:ci"
+    "test:ci:client-js": "yarn workspace @web3api/client-js test:ci",
+    "clean": "rimraf ./**/node_modules ./**/build"
   },
   "devDependencies": {
-    "lerna": "3.22.1"
+    "lerna": "3.22.1",
+    "rimraf": "3.0.2"
   }
 }
