--- a/packages/client-js-plugins/ipfs/package.json
+++ b/packages/client-js-plugins/ipfs/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "main": "build/index.js",
   "scripts": {
-    "build": "rm -rf build && tsc",
+    "build": "rimraf build && tsc",
     "test": "WORKER_ENV=test jest --passWithNoTests --runInBand --verbose",
     "test:watch": "WORKER_ENV=test jest --watch --passWithNoTests --verbose"
   },
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/jest": "26.0.8",
     "jest": "26.2.2",
+    "rimraf": "3.0.2",
     "ts-jest": "26.1.4",
     "ts-node": "8.10.2",
     "typescript": "3.9.7"
