--- a/demos/simple-storage/protocol/web3api.yaml
+++ b/demos/simple-storage/protocol/web3api.yaml
@@ -6,6 +6,7 @@ mutation:
     file: ./src/mutation/schema.graphql
   module:
     language: wasm/assemblyscript
+    file: ./src/mutation/index.ts
 query:
   schema:
     file: ./src/query/schema.graphql
