--- a/packages/manifest-schema/package.json
+++ b/packages/manifest-schema/package.json
@@ -2,5 +2,5 @@
   "name": "@web3api/manifest-schema",
   "version": "0.0.1-alpha.1",
   "license": "MIT",
-  "main": "versions/0-0-1.json"
+  "main": "versions/0.0.1-alpha.1.json"
 }
