--- a/packages/schema-composer/package.json
+++ b/packages/schema-composer/package.json
@@ -12,8 +12,8 @@
     "@types/chalk": "^2.2.0",
     "@types/mustache": "^4.0.1",
     "chalk": "^4.1.0",
-    "graphql": "15.3.0",
-    "graphql-tools": "7.0.1",
+    "graphql": "^15.4.0",
+    "graphql-tools": "^7.0.1",
     "mustache": "^4.0.1",
     "tslib": "^2.0.3"
   },
