--- a/packages/schema-parser/package.json
+++ b/packages/schema-parser/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@web3api/schema-binding",
+  "name": "@web3api/schema-parser",
   "version": "0.0.1-prealpha.1",
   "license": "MIT",
   "main": "build/index.js",
@@ -9,8 +9,8 @@
     "test:watch": "jest --watch --passWithNoTests --verbose"
   },
   "dependencies": {
-    "@web3api/schema-parser": "0.0.1-prealpha.1",
-    "mustache": "4.0.1"
+    "graphql": "^15.4.0",
+    "tslib": "^2.0.3"
   },
   "devDependencies": {
     "@types/jest": "26.0.8",
