--- a/packages/schema-parser/tsconfig.json
+++ b/packages/schema-parser/tsconfig.json
@@ -6,13 +6,8 @@
     "lib": [
       "es2015",
       "es5",
-      "dom",
-      "es2015.collection",
-      "es2015.iterable",
-      "es2020.string"
+      "dom"
     ],
-    "downlevelIteration": true,
-    "importHelpers": true,
     "moduleResolution": "node",
     "declaration": true,
     "preserveSymlinks": true,
@@ -26,8 +21,7 @@
     "module": "commonjs",
     "sourceMap": true,
     "target": "es5",
-    "strictNullChecks": true,
-    "strict": false
+    "strictNullChecks": true
   },
   "include": [
     "./src/**/*"
