--- a/packages/schema-validator/package.json
+++ b/packages/schema-validator/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@web3api/schema-binding",
+  "name": "@web3api/schema-validator",
   "version": "0.0.1-prealpha.1",
   "license": "MIT",
   "main": "build/index.js",
@@ -8,10 +8,7 @@
     "test": "jest --passWithNoTests --runInBand --verbose",
     "test:watch": "jest --watch --passWithNoTests --verbose"
   },
-  "dependencies": {
-    "@web3api/schema-parser": "0.0.1-prealpha.1",
-    "mustache": "4.0.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/jest": "26.0.8",
     "jest": "26.2.2",
