schema-parser: extract & transform visitors

--- a/packages/schema-parser/tsconfig.json
+++ b/packages/schema-parser/tsconfig.json
@@ -26,7 +26,7 @@
   "include": [
     "./src/**/*"
   ],
-  // "exclude": [
-  //   "./src/**/__tests__"
-  // ]
+  "exclude": [
+    "./src/**/__tests__"
+  ]
 }
