--- a/packages/schema-binding/package.json
+++ b/packages/schema-binding/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@types/jest": "26.0.8",
+    "@types/mustache": "^4.0.1",
     "jest": "26.2.2",
     "rimraf": "3.0.2",
     "ts-jest": "26.1.4",
