--- a/packages/schema-composer/package.json
+++ b/packages/schema-composer/package.json
@@ -10,13 +10,13 @@
   },
   "dependencies": {
     "@web3api/schema-parser": "0.0.1-prealpha.1",
-    "graphql": "^15.4.0",
-    "mustache": "^4.0.1",
-    "tslib": "^2.0.3"
+    "graphql": "15.4.0",
+    "mustache": "4.0.1",
+    "tslib": "2.0.3"
   },
   "devDependencies": {
     "@types/jest": "26.0.8",
-    "@types/mustache": "^4.0.1",
+    "@types/mustache": "4.0.1",
     "jest": "26.2.2",
     "rimraf": "3.0.2",
     "ts-jest": "26.1.4",
