--- a/packages/schema-parser/package.json
+++ b/packages/schema-parser/package.json
@@ -12,8 +12,9 @@
     "test:watch": "jest --watch --passWithNoTests --verbose"
   },
   "dependencies": {
-    "graphql": "^15.4.0",
-    "tslib": "^2.0.3"
+    "graphql": "15.4.0",
+    "graphql-tools": "7.0.1",
+    "tslib": "2.0.3"
   },
   "devDependencies": {
     "@types/jest": "26.0.8",
