--- a/packages/schema-parser/package.json
+++ b/packages/schema-parser/package.json
@@ -12,11 +12,13 @@
     "test:watch": "jest --watch --passWithNoTests --verbose"
   },
   "dependencies": {
+    "deep-equal": "2.0.4",
     "graphql": "15.4.0",
     "graphql-tools": "7.0.1",
     "tslib": "2.0.3"
   },
   "devDependencies": {
+    "@types/deep-equal": "1.0.1",
     "@types/jest": "26.0.8",
     "jest": "26.2.2",
     "rimraf": "3.0.2",
