--- a/packages/wasm-as/tsconfig.json
+++ b/packages/wasm-as/tsconfig.json
@@ -2,5 +2,8 @@
     "extends": "assemblyscript/std/assembly.json",
     "include": [
       "./assembly/**/*.ts"
+    ],
+    "exclude": [
+      "./assembly/__tests__/**/*.ts"
     ]
 }
