--- a/packages/client-js-plugins/graph-node/package.json
+++ b/packages/client-js-plugins/graph-node/package.json
@@ -9,7 +9,7 @@
     "test:watch": "WORKER_ENV=test jest --watch --passWithNoTests --verbose"
   },
   "dependencies": {
-    "@web3api/client-js-plugin": "0.0.1-prealpha.1",
+    "@web3api/client-js": "0.0.1-prealpha.1",
     "apollo-link": "1.2.14",
     "apollo-link-http": "1.5.17",
     "cross-fetch": "3.0.5",
