--- a/packages/client-js/src/__tests__/manifest/migrator/format-0.0.1-alpha.1/web3api.yml
+++ b/packages/client-js/src/__tests__/manifest/migrator/format-0.0.1-alpha.1/web3api.yml
@@ -1,5 +1,5 @@
 description: Awesome Web3API project
-version: "0.0.1-alpha.1"
+format: "0.0.1-alpha.1"
 mutation:
   schema:
     file: ../mutation/schema.graphql
