--- a/packages/client-js/src/__tests__/manifest/migrator/format-0.0.1-alpha.2/web3api.yml
+++ b/packages/client-js/src/__tests__/manifest/migrator/format-0.0.1-alpha.2/web3api.yml
@@ -1,5 +1,5 @@
 description: Awesome Web3API project
-version: "0.0.1-alpha.2"
+format: "0.0.1-alpha.2"
 api: 
   schemas:
     - file: ../query/schema.graphql
