--- a/packages/client-js/package.json
+++ b/packages/client-js/package.json
@@ -16,6 +16,7 @@
     "@msgpack/msgpack": "2.3.0",
     "@web3api/ethereum-plugin-js": "0.0.1-prealpha.1",
     "@web3api/ipfs-plugin-js": "0.0.1-prealpha.1",
+    "@web3api/schema-parser": "0.0.1-prealpha.1",
     "@web3api/wasm-as": "0.0.1-prealpha.1",
     "graphql": "15.3.0",
     "graphql-tag": "2.10.4",
