--- a/packages/wasm-ts/package.json
+++ b/packages/wasm-ts/package.json
@@ -5,6 +5,7 @@
   "main": "./assembly/index.ts",
   "scripts": {
     "build": "asc ./assembly/index.ts --outFile ./build/index.wasm -d ./build/index.d.ts",
+    "lint:code": "eslint --color --ext .ts assembly/",
     "test": "asp --verbose",
     "test:ci": "asp --summary"
   },
