api-resolver & uri-resolver as core APIs

--- a/packages/core-apis/api-resolver.core.web3api.eth/web3api.yaml
+++ b/packages/core-apis/api-resolver.core.web3api.eth/web3api.yaml
@@ -1,4 +1,4 @@
-description: Graph Node Web3API
+description: Web3API Resolver Standard
 repository: https://github.com/web3-api/prototype
 abstract: true
 query:
