--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -9,10 +9,15 @@ jobs:
     timeout-minutes: 10
     steps:
       - uses: actions/checkout@v2
+
+      - name: Read .nvmrc
+        run: echo ::set-output name=NVMRC::$(cat .nvmrc)
+        id: nvm
+      
       - name: Set up Node.js
         uses: actions/setup-node@master
         with:
-          node-version: 14.4.0
+          node-version: '${{ steps.nvm.outputs.NVMRC }}'
 
       - uses: actions/cache@v2
         id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
@@ -27,4 +32,4 @@ jobs:
         run: yarn install --nonInteractive --frozen-lockfile
 
       - name: Lint code
-        run: yarn run lint:code:ci
+        run: yarn run lint:ci
