--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "build:cli": "yarn workspace @web3api/cli build",
     "build:client-js": "yarn workspace @web3api/client-js build",
     "build:wasm-as": "yarn workspace @web3api/wasm-as build",
-    "lint:code": "lerna run lint:code",
-    "lint:code:ci": "lerna run --parallel lint:code",
+    "build:wasm-ts": "yarn workspace @web3api/wasm-ts build",
+    "lint": "lerna run lint",
+    "lint:ci": "lerna run --parallel lint",
     "test": "yarn test:wasm-as && yarn test:client-js",
     "test:wasm-as": "yarn workspace @web3api/wasm-as test",
     "test:client-js": "yarn workspace @web3api/client-js test",
@@ -29,14 +30,13 @@
     "clean": "rimraf ./**/node_modules ./**/build"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "4.9.0",
+    "@typescript-eslint/parser": "4.9.0",
+    "eslint": "7.14.0",
+    "eslint-config-prettier": "6.15.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-prettier": "3.2.0",
     "lerna": "3.22.1",
-    "rimraf": "3.0.2",
-    "@typescript-eslint/eslint-plugin": "^4.9.0",
-    "@typescript-eslint/parser": "^4.9.0",
-    "eslint": "^7.14.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.2.0",
-    "prettier": "^2.2.1"
+    "prettier": "2.2.1"
   }
 }
