--- a/packages/client-js/package.json
+++ b/packages/client-js/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "main": "build/index.js",
   "scripts": {
-    "build": "rimraf build && yarn build:manifest && tsc",
+    "build": "rimraf build && yarn build:manifest && tsc --project tsconfig.build.json",
     "build:manifest": "node ./scripts/generateManifest.js",
     "lint": "eslint --color --ext .ts src/",
     "test": "WORKER_ENV=test jest --passWithNoTests --runInBand --verbose",
@@ -18,6 +18,7 @@
     "@web3api/wasm-ts": "0.0.1-alpha.1",
     "apollo-link": "1.2.14",
     "apollo-link-http": "1.5.17",
+    "cids": "1.0.2",
     "cross-fetch": "3.0.5",
     "ethers": "5.0.7",
     "graphql": "15.3.0",
@@ -31,10 +32,10 @@
   "devDependencies": {
     "@types/jest": "26.0.8",
     "@types/js-yaml": "3.11.1",
-    "@types/semver":"^7.3.4",
+    "@types/semver": "^7.3.4",
     "@web3api/cli": "0.0.1-alpha.1",
     "@web3api/manifest-schema": "0.0.1-alpha.1",
-    "axios": "0.19.2",
+    "axios": "^0.21.0",
     "jest": "26.2.2",
     "json-schema-to-typescript": "9.1.1",
     "rimraf": "3.0.2",
