--- a/.prettierrc
+++ b/.prettierrc
@@ -3,9 +3,9 @@
   "tabWidth": 2,
   "useTabs": false,
   "semi": true,
-  "singleQuote": true,
+  "singleQuote": false,
   "quoteProps": "as-needed",
   "trailingComma": "es5",
-  "bracketSpacing": false,
+  "bracketSpacing": true,
   "arrowParens": "always"
 }
