--- a/packages/client-js-plugins/ipfs/package.json
+++ b/packages/client-js-plugins/ipfs/package.json
@@ -5,8 +5,8 @@
   "main": "build/index.js",
   "scripts": {
     "build": "rimraf build && tsc",
-    "test": "WORKER_ENV=test jest --passWithNoTests --runInBand --verbose",
-    "test:watch": "WORKER_ENV=test jest --watch --passWithNoTests --verbose"
+    "test": "jest --passWithNoTests --runInBand --verbose",
+    "test:watch": "jest --watch --passWithNoTests --verbose"
   },
   "dependencies": {
     "@web3api/client-js": "0.0.1-prealpha.1",
