--- a/packages/client-std-js/package.json
+++ b/packages/client-std-js/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@web3api/graph-node-plugin-js",
+  "name": "@web3api/client-lib-js",
   "version": "0.0.1-prealpha.1",
   "license": "MIT",
   "main": "build/index.js",
@@ -9,10 +9,7 @@
     "test:watch": "jest --watch --passWithNoTests --verbose"
   },
   "dependencies": {
-    "@web3api/client-js": "0.0.1-prealpha.1",
-    "apollo-link": "1.2.14",
-    "apollo-link-http": "1.5.17",
-    "cross-fetch": "3.0.5",
+    "graphql": "15.3.0",
     "graphql-tag": "2.10.4"
   },
   "devDependencies": {
