--- a/packages/js/plugins/ipfs/package.json
+++ b/packages/js/plugins/ipfs/package.json
@@ -9,7 +9,7 @@
     "test:watch": "jest --watch --passWithNoTests --verbose"
   },
   "dependencies": {
-    "@web3api/client-js": "0.0.1-prealpha.1",
+    "@web3api/core-js": "0.0.1-prealpha.1",
     "ipfs-http-client": "45.0.0",
     "is-ipfs": "1.0.3"
   },
