--- a/packages/js/client/package.json
+++ b/packages/js/client/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@assemblyscript/loader": "0.14.1",
     "@msgpack/msgpack": "2.3.0",
+    "@web3api/core-js": "0.0.1-prealpha.1",
     "@web3api/ethereum-plugin-js": "0.0.1-prealpha.1",
     "@web3api/ipfs-plugin-js": "0.0.1-prealpha.1",
     "@web3api/schema-parse": "0.0.1-prealpha.1",
