--- a/packages/js/plugins/ipfs/package.json
+++ b/packages/js/plugins/ipfs/package.json
@@ -5,6 +5,7 @@
   "main": "build/index.js",
   "scripts": {
     "build": "rimraf build && tsc",
+    "lint": "eslint --color --ext .ts src/",
     "test": "jest --passWithNoTests --runInBand --verbose",
     "test:watch": "jest --watch --passWithNoTests --verbose"
   },
