--- a/package.json
+++ b/package.json
@@ -30,13 +30,14 @@
     "clean": "rimraf ./**/node_modules ./**/build"
   },
   "devDependencies": {
+    "lerna": "3.22.1",
+    "rimraf": "3.0.2",
     "@typescript-eslint/eslint-plugin": "4.9.0",
     "@typescript-eslint/parser": "4.9.0",
     "eslint": "7.14.0",
     "eslint-config-prettier": "6.15.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-prettier": "3.2.0",
-    "lerna": "3.22.1",
     "prettier": "2.2.1"
   }
 }
