--- a/packages/js/client/package.json
+++ b/packages/js/client/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "main": "build/index.js",
   "scripts": {
-    "build": "rimraf ./build && tsc",
+    "build": "rimraf ./build && tsc --project tsconfig.build.json",
     "lint": "eslint --color --ext .ts src/",
     "test": "jest --passWithNoTests --runInBand --verbose",
     "test:watch": "jest --watch --passWithNoTests --verbose",
@@ -20,6 +20,7 @@
     "@web3api/ipfs-plugin-js": "0.0.1-prealpha.1",
     "@web3api/schema-parse": "0.0.1-prealpha.1",
     "@web3api/wasm-as": "0.0.1-prealpha.1",
+    "graphql": "^15.4.0",
     "js-yaml": "3.14.0",
     "threads": "1.6.3"
   },
