--- a/packages/js/plugins/ens/package.json
+++ b/packages/js/plugins/ens/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@web3api/client-js": "0.0.1-prealpha.1",
+    "@web3api/core-js": "^0.0.1-prealpha.1",
     "ethers": "5.0.7"
   },
   "devDependencies": {
