fixup query implementation

--- a/packages/js/client/package.json
+++ b/packages/js/client/package.json
@@ -13,13 +13,12 @@
     "test:env:down": "w3 test-env down"
   },
   "dependencies": {
-    "@assemblyscript/loader": "0.14.1",
     "@msgpack/msgpack": "2.3.0",
     "@web3api/core-js": "0.0.1-prealpha.1",
+    "@web3api/ens-plugin-js": "0.0.1-prealpha.1",
     "@web3api/ethereum-plugin-js": "0.0.1-prealpha.1",
     "@web3api/ipfs-plugin-js": "0.0.1-prealpha.1",
     "@web3api/schema-parse": "0.0.1-prealpha.1",
-    "@web3api/wasm-as": "0.0.1-prealpha.1",
     "graphql": "^15.4.0",
     "js-yaml": "3.14.0",
     "threads": "1.6.3"
