remove 1st party graph-node integration, will add back as a 3rd party extention

--- a/demos/simple-storage/protocol/package.json
+++ b/demos/simple-storage/protocol/package.json
@@ -5,12 +5,9 @@
   "scripts": {
     "build": "w3 build",
     "test:env:up": "w3 test-env up && yarn contracts:deploy",
-    "test:env:down": "w3 test-env down",
-    "subgraph:codegen": "cd src/subgraph && graph codegen --out-dir generated/"
+    "test:env:down": "w3 test-env down"
   },
   "devDependencies": {
-    "@graphprotocol/graph-cli": "^0.18.0",
-    "@graphprotocol/graph-ts": "^0.18.1",
     "@web3api/cli": "0.0.1-prealpha.1",
     "@web3api/client-js": "0.0.1-prealpha.1",
     "@web3api/wasm-as": "0.0.1-prealpha.1",
